upload iphone and samsung files

--- a/samsung.html
+++ b/samsung.html
@@ -31,7 +31,7 @@
     <h3 class="title">Samsung Galaxy S22 Ultra 256gb/12gb</h3>
     <img src="images/S22 Ultra.jpg" alt="Galaxy S22 Ultra" width="30%">
     <p class="price">£800</p>
-
+<div>
     <h1>Refurbished</h1>
     
     <h3 class="title">Samsung Galaxy S21 128gb/8gb</h3>
