Added iphone, samsung, index and main files

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </div>
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="iPhone.html">iPhones</a>
-        <a href="Samsung.html">Samsung</a>
+        <a href="iphone.html">iPhones</a>
+        <a href="samsung.html">Samsung</a>
         <a href="aboutme.html">About Me</a>
         <a href="contact.html">Contact me</a>
     </div>
