--- a/samsung.html
+++ b/samsung.html
@@ -19,7 +19,8 @@
     <div>
 
    <h1>Brand New</h1>
-   <div class="navbar">
+
+    <div class="navbar">
     <h3 class="title">Samsung Galaxy S22 128gb/8gb</h3>
     <img src="images/S22.webp" alt="Galaxy S22" width="30%">
     <p class="price">£400</p>
@@ -28,12 +29,13 @@
     <img src="images/S22+.jpg" alt="Galaxy S22+" width="30%">
     <p class="price">£570</p>
 
-    <h3 class="title">Samsung Galaxy S22 Ultra 256gb/12gb</h3>
-    <img src="images/S22 Ultra.jpg" alt="Galaxy S22 Ultra" width="30%">
+    <h3 class="title">Samsung Galaxy S22 Ultra 256gb/12gb</h3>        <img src="images/S22 Ultra.jpg" alt="Galaxy S22 Ultra" width="30%">
     <p class="price">£800</p>
-<div>
+    </div>
+
     <h1>Refurbished</h1>
-    
+
+    <div class="navbar">
     <h3 class="title">Samsung Galaxy S21 128gb/8gb</h3>
     <img src="images/S21.jpg" alt="Galaxy S21" width="30%">
     <p class="price">£350</p>
@@ -45,7 +47,7 @@
     <h3 class="title">Samsung Galaxy S10</h3>
     <img src="images/galaxys10.jpg" alt="Galaxy S10" width="40%">
     <p class="price">£280</p>
-    <div>
-
+</div>
+    </div>
 </body>
 </html>
