Added index file

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div>
     <img src="images/mk.png" alt="icon of Logo" width="90px">   
 </div>
-    <div class="navbar">
+    <div>
         <a href="index.html">Home</a>
         <a href="iphone.html">iPhones</a>
         <a href="samsung.html">Samsung</a>
