--- a/aboutme.html
+++ b/aboutme.html
@@ -13,7 +13,7 @@
 <div class="navbar4">
         <a href="index.html">Home</a>
         <a href="iPhone.html">iPhones</a>
-        <a href="Samsung.html">Samsung</a>
+        <a href="samsung.html">Samsung</a>
         <a href="contact.html">Contact me</a>
     <div>
 
