--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,8 @@
 
     <div class="navbar5">
     <a href="index.html">Home</a>
-    <a href="iPhone.html">iPhones</a>
-    <a href="Samsung.html">Samsung</a>
+    <a href="iphone.html">iPhones</a>
+    <a href="samsung.html">Samsung</a>
     <a href="aboutme.html">About Me</a>
     <div>
 
