--- a/samsung.html
+++ b/samsung.html
@@ -13,7 +13,7 @@
  
 <div class="navbar5">
     <a href="index.html">Home</a>
-    <a href="iPhone.html">iPhones</a>
+    <a href="iphone.html">iPhones</a>
     <a href="aboutme.html">About Me</a>
     <a href="contact.html">Contact me</a>
     <div>
