--- a/aboutme.html
+++ b/aboutme.html
@@ -12,7 +12,7 @@
     <img src="images/mk.png" alt="icon of Logo" width="90px">
 <div class="navbar4">
         <a href="index.html">Home</a>
-        <a href="iPhone.html">iPhones</a>
+        <a href="iphone.html">iPhones</a>
         <a href="samsung.html">Samsung</a>
         <a href="contact.html">Contact me</a>
     <div>
