--- a/iphone.html
+++ b/iphone.html
@@ -12,7 +12,7 @@
         <div>
     <div>
     <img src="images/apple.png" alt="logo of apple">
-<div>
+ <div>
     
     <a href="index.html">Home</a>
     <a href="samsung.html">Samsung</a>
@@ -24,15 +24,15 @@
 
     <div class="navbar">
     <h3 class="title">Apple iPhone 13 128gb</h3>
-    <img src="images/iPhone13.jpg" alt="iPhone 13" width="40%">
+    <img src="images/iphone13.jpg" alt="iPhone 13" width="40%">
     <p class="price">£400</p>
 
     <h3 class="title">Apple iPhone 13 Pro 256gb</h3>
-    <img src="images/13Pro.jpg" alt="iPhone 13 Pro" width="40%">
+    <img src="images/13pro.jpg" alt="iPhone 13 Pro" width="40%">
     <p class="price">£550</p>
 
     <h3 class="title">Apple iPhone 13 Pro Max 512gb</h3>
-    <img src="images/13Pro.jpg" alt="iPhone 13 Pro Max" width="40%">
+    <img src="images/13pro.jpg" alt="iPhone 13 Pro Max" width="40%">
     <p class="price">£800</p>
     </div>
     
