Added apple images and logo

--- a/iphone.html
+++ b/iphone.html
@@ -11,7 +11,7 @@
     <div class="Container">
         <div>
     <div>
-    <img src="images/apple.png" alt="logo of apple">
+    <img src="images/apple.png" alt="logo of Apple">
  <div>
     
     <a href="index.html">Home</a>
@@ -24,7 +24,7 @@
 
     <div class="navbar">
     <h3 class="title">Apple iPhone 13 128gb</h3>
-    <img src="images/iphone13.jpg" alt="iPhone 13" width="40%">
+    <img src="images/iPhone13.jpg" alt="iPhone 13" width="40%">
     <p class="price">£400</p>
 
     <h3 class="title">Apple iPhone 13 Pro 256gb</h3>
