--- a/iphone.html
+++ b/iphone.html
@@ -11,7 +11,7 @@
     <div class="Container">
         <div>
     <div>
-    <img src="images/apple.png" alt="logo of Apple">
+    <img src="images/apple.png" alt="logo of apple">
  <div>
     
     <a href="index.html">Home</a>
