Change the text size

--- a/iphone.html
+++ b/iphone.html
@@ -39,15 +39,15 @@
     <h1>Refurbished</h1>
     
     <div class="navbar">
-    <h3 class="title">iphone 12 128gb</h3>
+    <h3 class="title">iPhone 12 128gb</h3>
     <img src="images/iPhone12.jpg" alt="iPhone 12" width="40%">
     <p class="price">£380</p>
 
-    <h3 class=title>iphone XR 128gb</h3>
+    <h3 class=title>iPhone XR 128gb</h3>
     <img src="images/iPhoneXR.jpg" alt="iPhone XR" width="40%">
     <p class="price">£180</p>
 
-    <h3 class="title">iphone SE 64gb</h3>
+    <h3 class="title">iPhone SE 64gb</h3>
     <img src="images/iPhoneSE.jpg" alt="iPhone SE" width="40%">
     <p class="price">£210</p>
 
