--- a/iphone.html
+++ b/iphone.html
@@ -28,7 +28,7 @@
     <p class="price">£400</p>
 
     <h3 class="title">Apple iPhone 13 Pro 256gb</h3>
-    <img src="images/13pro.jpg" alt="iPhone 13 Pro" width="40%">
+    <img src="images/iPhone13pro.jpg" alt="iPhone 13 Pro" width="40%">
     <p class="price">£550</p>
 
     <h3 class="title">Apple iPhone 13 Pro Max 512gb</h3>
